Forsiden mangler kun at blive stylet færdigt

--- a/DevelopmentTask/Views/Home.cshtml
+++ b/DevelopmentTask/Views/Home.cshtml
@@ -17,6 +17,35 @@
         <section>
             <div>
                 <h3>@Model.Value("product1name")</h3>
+                @Model.Value("product1items")
+                <a href="#">
+                    @Model.Value("product1price")<p> /måned</p>
+                    <p>Ekskl. moms</p>
+                </a>
+            </div>
+            <div>
+                <h3>@Model.Value("product2name")</h3>
+                @Model.Value("product2items")
+                <a href="#">
+                    @Model.Value("product2price")<p> /måned</p>
+                    <p>Ekskl. moms</p>
+                </a>
+            </div>
+            <div>
+                <h3>@Model.Value("product3name")</h3>
+                @Model.Value("product3items")
+                <a href="#">
+                    @Model.Value("product3price")<p> /måned</p>
+                    <p>Ekskl. moms</p>
+                </a>
+            </div>
+            <div>
+                <h3>@Model.Value("product4name")</h3>
+                @Model.Value("product4items")
+                <a href="#">
+                    @Model.Value("product4price")<p> /måned</p>
+                    <p>Ekskl. moms</p>
+                </a>
             </div>
         </section>
     </main>
