--- a/DevelopmentTask/Views/master.cshtml
+++ b/DevelopmentTask/Views/master.cshtml
@@ -7,6 +7,7 @@
 <html>
 <head>
     <link href="~/css/style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/b394bbec28.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
