--- a/DevelopmentTask/css/_vars.scss
+++ b/DevelopmentTask/css/_vars.scss
@@ -1,9 +1,18 @@
 ﻿//Background colors
 $BgColor: #BE9BC0;
+$BtnLightColor: #F5EFF5;
 $FooterBgColor: #5C245F;
+
+//Font sizes
+$H1Size: 80px;
+$H2Size: 40px;
+$H3Size: 30px;
+$H4Size: 30px;
+$pSize: 16px;
 
 //Font colors
 $H1Color: #47054A;
 $H2Color: #5C245F;
+$H4Color: #BAB2BB;
 $LightFontColor: #FEE7FF;
 $FooterFontColor: #AA81AC;
