--- a/DevelopmentTask/css/_mixins.scss
+++ b/DevelopmentTask/css/_mixins.scss
@@ -1,8 +1,9 @@
 ﻿@mixin buttonPrimary {
-    width: 150px;
-    padding: 10px;
-    background-color: #0077ff;
+    border-radius: 50px;
+    padding: 15px 30px;
+    background-color: #AA81AC;
     color: white;
+    font-size: 20px;
     border: none;
     text-decoration: none;
     text-align: center;
