--- a/DevelopmentTask/Views/Partials/SignIn.cshtml
+++ b/DevelopmentTask/Views/Partials/SignIn.cshtml
@@ -42,15 +42,11 @@
 
     </div>
 
-    <div class="form-group check-box-wrapper">
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> Remember Me
+        <div >
+            <label class="checkbox">
+                <input type="checkbox"/> Remember Me
             </label>
         </div>
-    </div>
-
-    <div class="btn-wrapper">
-        <button type="submit" class="signin__button btn btn-primary">Sign In</button>
-    </div>
+        
+        <button type="submit" class="signin__button">Sign In</button>
 }
