--- a/DevelopmentTask/Views/SignUp.cshtml
+++ b/DevelopmentTask/Views/SignUp.cshtml
@@ -4,4 +4,10 @@
 	Layout = "master.cshtml";
 }
 
-@Html.Partial("SignUp")
+    <main class="signin">
+        <h2 class="signin__title">Sign Up</h2>
+        <div class="signin__wrapper">
+            @Html.Partial("SignUp")
+        </div>
+    </main>
+
