--- a/DevelopmentTask/css/style.css
+++ b/DevelopmentTask/css/style.css
@@ -147,10 +147,29 @@ footer {
       align-items: end; }
 
 .signin {
-  background-image: url("../Image/login2.png");
-  background-size: 100%;
+  background-color: #BE9BC0;
   height: 650px;
   position: relative; }
+  .signin .signin__title {
+    position: absolute;
+    text-align: center;
+    margin: 40px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+  .signin a {
+    position: absolute;
+    left: 0;
+    right: 0;
+    text-align: center;
+    text-decoration: none;
+    color: #FEE7FF;
+    font-size: 20px; }
+  .signin .signup__link {
+    bottom: 75px; }
+  .signin .forgot__link {
+    bottom: 50px; }
 
 .signin__wrapper {
   position: absolute;
@@ -162,23 +181,38 @@ footer {
   padding: 30px;
   width: 400px;
   height: 350px;
-  background-color: #808080; }
+  background-color: white;
+  border-radius: 10px; }
+  .signin__wrapper label {
+    display: inline-block;
+    color: #A28DA3;
+    font-size: 16px; }
   .signin__wrapper input {
     width: 100%;
     margin: 8px 0px 20px 0px;
-    padding: 10px 0 10px 10px;
-    box-sizing: border-box; }
-  .signin__wrapper .btn-wrapper {
-    position: absolute;
-    bottom: 30px;
-    right: 30px; }
-  .signin__wrapper .action-link {
-    float: right; }
+    padding: 15px 0 15px 10px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+    background-color: #F5EFF5;
+    font-size: 16px;
+    color: #5C245F; }
   .signin__wrapper .signin__email, .signin__wrapper .signin__password {
     margin: 0; }
   .signin__wrapper .signin__title {
     padding-bottom: 20px; }
-  .signin__wrapper label {
-    display: inline-block; }
-  .signin__wrapper h2 {
-    text-align: center; }
+  .signin__wrapper .signin__button {
+    border-radius: 50px;
+    padding: 15px 30px;
+    background-color: #AA81AC;
+    color: white;
+    font-size: 20px;
+    border: none;
+    text-decoration: none;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: auto; }
+  .signin__wrapper .signin__button:hover {
+    background-color: #47054A; }
