--- a/DevelopmentTask/Views/Partials/SignIn.cshtml
+++ b/DevelopmentTask/Views/Partials/SignIn.cshtml
@@ -42,9 +42,9 @@
 
     </div>
 
-        <div >
-            <label class="checkbox">
-                <input type="checkbox"/> Remember Me
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"/> <span>Remember Me</span>
             </label>
         </div>
         
